# ai

./: .gitignore  .readthedocs.yaml  .travis.yml  README.md  README.rst  conf.py  index.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
ai/: __init__.py  conf.py  config.py  iconf.py
ai/agent/: ARCHITECTURE.md  README.md
ai/conf/: self.conf
ai/data/: __init__.py  augment.py
ai/dataset/: augment.py
ai/helper/: __init__.py  face.py  img.py  pdf.py  self.conf  vis.py
ai/kg/: __init__.py  kg.py
ai/llm/: postprocess.py
ai/loss/: __init__.py
ai/memory/: AI_COMPANIES_PREDICTION.md  ARCHITECTURE.md  BOOK_MEMORY_ARCHITECTURE.md  MODEL.md  README.md  VECTOR_DB_COMPARISON.md
ai/metric/: __init__.py
ai/metrics/: __init__.py
ai/models/: __init__.py
ai/nn/: __init__.py  activations.py  attention.py  blocks.py
ai/optim/: __init__.py
ai/tensor/: __init__.py
ai/trainer/: __init__.py
ai/training/: __init__.py
ai/tts/: __init__.py
ai/utils/: __init__.py
ai/vis/: __init__.py
docs/: conf.py  index.rst
docs/source/: index.rst
tests/: __init__.py  kg.ipynb  test_config.py  test_kg.py  test_optim.py  test_sample.py  test_tts.py
tests/sample/: kg.xls  new.xls
