[metadata]
    name = ai
    author = Decalogue
    version = 0.0.1
    author_email = 1044908508@qq.com
    summary = Ai lib.
    license = MIT
    description = 
        README.md
    home-page = http://pypi.python.org/pypi/ai
    requires-python = >=3.3
    classifiers = 
        Development Status :: 5 - Production/Stable
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        Natural Language :: English
		Natural Language :: Chinese (Simplified)
        License :: OSI Approved :: MIT License
        Operating System :: Microsoft :: Windows
        Operating System :: POSIX :: Linux
        Operating System :: MacOS :: MacOS X
        Operating System :: Other OS
        Programming Language :: Python :: 2.7
        Programming Language :: Python :: 3.4
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.6

[files]
packages = 
    ai